[metadata]
version = 1.0.3.dev0
name = zodbverify
description = Check if all data from a ZODB can be loaded
long_description = file: README.rst, CHANGES.rst
keywords = ZODB, check, verification
author = Plone Foundation Contributors
author_email = releasemanager@plone.org
url = https://github.com/plone/zodbverify
license = GNU General Public License v2 (GPLv2)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Zope
    Framework :: Zope :: 4
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
install_requires =
    ZODB

namespace_packages =
# thanks to this bug
# https://github.com/pypa/setuptools/issues/1136
# the following line w/o override in setup.py does not work.
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    zodbverify=zodbverify.__main__:main
plone.recipe.zope2instance.ctl =
    zodbverify = zodbverify.entrypoint:zopectl_entry

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 79
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3

[bdist_wheel]
universal = 1
